[workspace]
members = ["breakwater-parser", "breakwater"]
resolver = "2"

[workspace.package]
version = "0.16.1"
license = "Beerware"
authors = ["Sebastian Bernauer <bernauerse@web.de>"]
edition = "2021"
repository = "https://github.com/sernauer/breakwater"

[workspace.dependencies]
async-trait = "0.1"
chrono = "0.4"
clap = { version = "4.5", features = ["derive"] }
const_format = "0.2"
criterion = {version = "0.5", features = ["async_tokio"]}
env_logger = "0.11"
log = "0.4"
memadvise = "0.1"
memchr = "2.7"
number_prefix = "0.4"
page_size = "0.6"
pixelbomber = "0.9"
prometheus_exporter = "0.8"
rstest = "0.23"
rusttype = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
simple_moving_average = "1.0"
snafu = "0.8"
softbuffer = "0.4"
tokio = { version = "1.41", features = ["fs", "rt-multi-thread", "net", "io-util", "macros", "process", "signal", "sync", "time"] }
trait-variant = "0.1"
vncserver = "0.2"
winit = "0.30"

# Uses the given path when used locally, and uses the specified version from crates.io when published.
breakwater-core = { path = "breakwater-core", version = "0.16.1" }
breakwater-parser = { path = "breakwater-parser", version = "0.16.1" }

[profile.dev]
opt-level = 3

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
# panic = "abort" # You can enable this, but I prefer to get actual stack traces

[patch.crates-io]
# https://github.com/rayylee/libvnc-rs/pull/2: Update bindgen to 0.69
# Also https://github.com/sbernauer/libvnc-rs/commit/2bf903ad64c7e33554b011eb05f96c11eadb8821 to get breakwater to build on NixOS
vncserver = { git = 'https://github.com/sbernauer/libvnc-rs.git' }
