[workspace]
members = [
    "breakwater-parser",
    "breakwater",
    "breakwater-egui-overlay",
    "breakwater-parser-c-bindings"
]
resolver = "2"

[workspace.package]
version = "0.18.0"
license = "Beerware"
authors = ["Sebastian Bernauer <bernauerse@web.de>"]
edition = "2024"
repository = "https://github.com/sernauer/breakwater"

[workspace.dependencies]
async-trait = "0.1"
bytemuck = { version = "1.21" }
chrono = "0.4"
clap = { version = "4.5", features = ["derive"] }
color-eyre = "0.6"
const_format = "0.2"
criterion = { version = "0.5", features = ["async_tokio"] }
eframe = { version = "0.31", default-features = false, features = ["glow", "default_fonts", "persistence", "wayland", "x11"] }
egui = { version = "0.31" }
libloading = { version = "0.8" }
local-ip-address = "0.6.3"
memadvise = "0.1"
memchr = "2.7"
number_prefix = "0.4"
page_size = "0.6"
pixelbomber = "1.1"
prometheus_exporter = "0.8"
rstest = "0.25"
rusttype = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
shared_memory = "0.12"
simple_moving_average = "1.0"
softbuffer = "0.4"
thiserror = "2"
tokio = { version = "1.41", features = ["fs", "rt-multi-thread", "net", "io-util", "macros", "process", "signal", "sync", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
trait-variant = "0.1"
vncserver = "0.2"
winit = "0.30"

# Uses the given path when used locally, and uses the specified version from crates.io when published.
breakwater-core = { path = "breakwater-core", version = "0.18.0" }
breakwater-parser = { path = "breakwater-parser", version = "0.18.0" }
breakwater-egui-overlay = { path = "breakwater-egui-overlay", version = "0.18.0" }

[profile.dev]
opt-level = 3

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
# panic = "abort" # You can enable this, but I prefer to get actual stack traces

[patch.crates-io]
# https://github.com/rayylee/libvnc-rs/pull/2: Update bindgen to 0.69
# Also https://github.com/sbernauer/libvnc-rs/commit/2bf903ad64c7e33554b011eb05f96c11eadb8821 to get breakwater to build on NixOS
vncserver = { git = 'https://github.com/sbernauer/libvnc-rs.git' }
