[workspace]
members = [
    "breakwater-parser",
    "breakwater",
    "breakwater-egui-overlay",
    "breakwater-parser-c-bindings",
    "breakwater-deich",
]
resolver = "2"

[workspace.package]
version = "0.22.0"
license = "Beerware"
authors = ["Sebastian Bernauer <bernauerse@web.de>"]
edition = "2024"
repository = "https://github.com/sernauer/breakwater"

[workspace.dependencies]
async-trait = "0.1"
bytemuck = { version = "1.21" }
chrono = "0.4"
clap = { version = "4.5", features = ["derive"] }
color-eyre = "0.6"
const_format = "0.2"
criterion = { version = "0.8", features = ["async_tokio"] }
eframe = { version = "0.34", default-features = false, features = ["glow", "default_fonts", "persistence", "wayland", "x11"] }
egui = "0.34"
futures = "0.3"
libloading = "0.9"
local-ip-address = "0.6.3"
memadvise = "0.1"
memchr = "2.7"
number_prefix = "0.4"
ndi-sdk-sys = "0.1.1"
page_size = "0.6"
pixelbomber = "1.1"
postcard = { version = "1.1", features = ["use-std"] }
prometheus_exporter = "0.8"
rstest = "0.26"
rusttype = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
shared_memory = "0.12"
simple_moving_average = "1.0"
softbuffer = "0.4"
thiserror = "2"
tokio = { version = "1.41", features = ["fs", "rt-multi-thread", "net", "io-util", "macros", "process", "signal", "sync", "time"] }
tokio-stream = { version = "0.1", features = ["net"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
trait-variant = "0.1"
uuid = { version = "1.23", features = ["v4", "serde"] }
vncserver = "0.2"
winit = "0.30"

# Uses the given path when used locally, and uses the specified version from crates.io when published.
breakwater-core = { path = "breakwater-core", version = "0.22.0", default-features = false }
breakwater-parser = { path = "breakwater-parser", version = "0.22.0", default-features = false }
breakwater = { path = "breakwater", version = "0.22.0", default-features = false }
breakwater-egui-overlay = { path = "breakwater-egui-overlay", version = "0.22.0", default-features = false }

[profile.dev]
opt-level = 3

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
# panic = "abort" # You can enable this, but I prefer to get actual stack traces

[patch.crates-io]
# https://github.com/rayylee/libvnc-rs/pull/2: Update bindgen to 0.69
# Also https://github.com/sbernauer/libvnc-rs/commit/2bf903ad64c7e33554b011eb05f96c11eadb8821 to get breakwater to build on NixOS
vncserver = { git = 'https://github.com/sbernauer/libvnc-rs.git' }

[workspace.lints.clippy]
# Enable all pedantic lints (with lower priority so individual lints can override)
pedantic = { level = "deny", priority = -1 }

# Pedantic lints we don't enforce (yet)
inline_always = "allow"
ptr_as_ptr = "allow"
cast_ptr_alignment = "allow"
cast_possible_wrap = "allow"
cast_possible_truncation = "allow"
cast_precision_loss = "allow"
cast_sign_loss = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
doc_markdown = "allow"
