[package]
name = "breakwater-egui-overlay"
description = "Bindings for a custom breakwater egui overlay"
version.workspace = true
license.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true

[dependencies]
eframe = { workspace = true, features = [] }
egui = { workspace = true, features = [] }
