[package]
name = "breakwater-parser"
description = "Parses Pixelflut commands as fast as possible"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true

[[bench]]
name = "parsing"
harness = false

[dependencies]
breakwater-core.workspace = true

enum_dispatch.workspace = true
memchr.workspace = true
snafu.workspace = true
trait-variant.workspace = true

[dev-dependencies]
criterion.workspace = true
pixelbomber.workspace = true

[features]
alpha = []
