[package]
name = "breakwater-parser"
description = "Parses Pixelflut commands as fast as possible"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true

[[bench]]
name = "parsing"
harness = false

[dependencies]
color-eyre.workspace = true
const_format.workspace = true
memchr.workspace = true
shared_memory.workspace = true
tracing.workspace = true

[dev-dependencies]
criterion.workspace = true
pixelbomber.workspace = true
rstest.workspace = true

[features]
alpha = []
binary-set-pixel = []
binary-sync-pixels = []

default = []
