[package]
name = "breakwater"
description = "Pixelflut server"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true

[[bin]]
name = "breakwater"
path = "src/main.rs"

[dependencies]
breakwater-parser.workspace = true

async-trait.workspace = true
chrono.workspace = true
clap.workspace = true
const_format.workspace = true
env_logger.workspace = true
log.workspace = true
memadvise.workspace = true
number_prefix.workspace = true
page_size.workspace = true
prometheus_exporter.workspace = true
rusttype.workspace = true
serde_json.workspace = true
serde.workspace = true
simple_moving_average.workspace = true
snafu.workspace = true
tokio.workspace = true
vncserver = { workspace = true, optional = true }

[dev-dependencies]
rstest.workspace = true

[features]
# We don't enable binary-sync-pixels by default to make it a bit harder for clients ;)
default = ["vnc", "binary-set-pixel"]

vnc = ["dep:vncserver"]
alpha = ["breakwater-parser/alpha"]
binary-set-pixel = ["breakwater-parser/binary-set-pixel"]
binary-sync-pixels = ["breakwater-parser/binary-sync-pixels"]

