[package]
name = "breakwater"
description = "Pixelflut server"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true

[[bin]]
name = "breakwater"
path = "src/main.rs"

[dependencies]
breakwater-parser.workspace = true
breakwater-egui-overlay = { workspace = true, optional = true }

async-trait.workspace = true
bytemuck = { workspace = true, optional = true }
chrono.workspace = true
clap.workspace = true
color-eyre.workspace = true
const_format.workspace = true
eframe = { workspace = true, optional = true }
egui = { workspace = true, optional = true }
libloading = { workspace = true, optional = true }
local-ip-address.workspace = true
memadvise.workspace = true
number_prefix.workspace = true
page_size.workspace = true
prometheus_exporter.workspace = true
rusttype.workspace = true
serde_json.workspace = true
serde.workspace = true
simple_moving_average.workspace = true
softbuffer = { workspace = true, optional = true }
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
vncserver = { workspace = true, optional = true }
winit = { workspace = true, optional = true }
tokio-stream = { version = "0.1.17", features = ["net"] }
futures = "0.3.31"

[dev-dependencies]
rstest.workspace = true

[features]
# We don't enable binary-sync-pixels and binary-set-pixel by default to make it a bit harder for clients ;)
default = ["egui", "vnc"]

alpha = ["breakwater-parser/alpha"]
binary-set-pixel = ["breakwater-parser/binary-set-pixel"]
binary-sync-pixels = ["breakwater-parser/binary-sync-pixels"]
egui = ["dep:breakwater-egui-overlay", "dep:bytemuck", "dep:eframe", "dep:egui", "dep:libloading"]
native-display = ["dep:softbuffer", "dep:winit"]
vnc = ["dep:vncserver"]
