[package]
name = "breakwater"
description = "Pixelflut server"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true

default-run = "breakwater"

[[bin]]
name = "breakwater"
path = "src/main.rs"

[dependencies]
breakwater-parser.workspace = true
breakwater-egui-overlay = { workspace = true, optional = true }

async-trait.workspace = true
bytemuck = { workspace = true, optional = true }
chrono.workspace = true
clap.workspace = true
color-eyre.workspace = true
const_format.workspace = true
eframe = { workspace = true, optional = true }
egui = { workspace = true, optional = true }
futures.workspace = true
humantime.workspace = true
libloading = { workspace = true, optional = true }
local-ip-address.workspace = true
memadvise.workspace = true
ndi-sdk-sys = { workspace = true, optional = true }
number_prefix = { workspace = true, optional = true }
page_size.workspace = true
prometheus_exporter = { workspace = true, optional = true }
rusttype = { workspace = true, optional = true }
serde_json.workspace = true
serde.workspace = true
simple_moving_average.workspace = true
softbuffer = { workspace = true, optional = true }
thiserror.workspace = true
tokio-stream.workspace = true
tokio.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true
vncserver = { workspace = true, optional = true }
winit = { workspace = true, optional = true }

[dev-dependencies]
rstest.workspace = true

[features]
# We don't enable binary-sync-pixels and binary-set-pixel by default to make it a bit harder for clients ;)
# VNC and NDI require shared libraries to be installed, so we don't enable them by default
# Yes, egui and winit require a graphical environment, but most people getting started with
# breakwater will likely do that on a desktop, servers admins generally know what they are doing (tm).
default = ["prometheus", "egui", "winit"]

# Enables the Prometheus metrics exporter. Can be disabled to support compilation on 32-bit targets.
# See https://github.com/tikv/rust-prometheus/issues/565
prometheus = ["dep:prometheus_exporter"]
alpha = ["breakwater-parser/alpha"]
binary-set-pixel = ["breakwater-parser/binary-set-pixel"]
binary-sync-pixels = ["breakwater-parser/binary-sync-pixels"]
egui = ["dep:breakwater-egui-overlay", "dep:bytemuck", "dep:eframe", "dep:egui", "dep:libloading"]
winit = ["dep:softbuffer", "dep:winit"]
vnc = ["dep:vncserver", "dep:number_prefix", "dep:rusttype"]
ndi = ["dep:ndi-sdk-sys"]

[lints]
workspace = true
